--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   ],
   "author": "Olivier Bourdoux",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xurei/react-jotform-embed.git"
+  },
   "peerDependencies": {
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
