--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "url": "git+https://github.com/xurei/react-jotform-embed.git"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react": "^15.0.0 || ^16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "@storybook/react": "^3.2.16",
