--- a/package.json
+++ b/package.json
@@ -25,34 +25,35 @@
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "prop-types": ">= 15.0.0"
   },
   "devDependencies": {
-    "@storybook/react": "^3.2.16",
-    "autobind-decorator": "^2.1.0",
+    "@storybook/react": "^3.4.11",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-source-map-support": "^1.0.0",
-    "babel-plugin-styled-components": "^1.3.0",
+    "babel-plugin-styled-components": "^1.9.4",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^3.19.0",
-    "eslint-config-xurei": "^1.0.3",
+    "eslint": "^5.10.0",
+    "eslint-config-xurei": "^1.1.0",
     "eslint-plugin-jsx": "0.0.2",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.2.1",
-    "eslint-plugin-react-native": "^3.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.5.0",
     "eslint-plugin-security": "^1.4.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "rimraf": "^2.6.1"
-  }
+  },
+  "dependencies": {}
 }
