--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
 	"presets": [
-		["env", {
+		["@babel/preset-env", {
+			"modules": "commonjs",
+			"corejs": 3,
+			"useBuiltIns": "usage",
 			"targets": {
 				"node": "6",
 				"chrome": "40",
@@ -9,12 +12,35 @@
 				"edge": "12"
 			}
 		}],
-		"react"
+		"@babel/preset-react"
 	],
 	"plugins": [
-		"syntax-decorators",
-		"transform-runtime",
-		"transform-class-properties",
-		"transform-decorators-legacy"
-	]
+		"@babel/plugin-proposal-class-properties"
+	],
+
+	"env": {
+		"module": {
+			"presets": [
+				[
+					"@babel/preset-env",
+					{
+						"modules": false,
+						"corejs": 3,
+						"useBuiltIns": "usage",
+						"targets": {
+							"node": "6",
+							"chrome": "40",
+							"firefox": "40",
+							"ie": "10",
+							"edge": "12"
+						}
+					}
+				],
+				"@babel/preset-react"
+			],
+			"plugins": [
+				"@babel/plugin-proposal-class-properties"
+			]
+		}
+	}
 }
