--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "react-jotform-embed",
   "version": "1.0.4",
   "description": "A rewrite for React of the embedded iframe provided by JotForm",
-  "main": "lib/react-jotform-embed.js",
+  "main": "lib/cjs/react-jotform-embed.js",
+  "module": "lib/module/react-jotform-embed.js",
+  "sideEffects": false,
   "scripts": {
     "test": "echo 'no test specified'",
     "pretest": "node_modules/.bin/eslint .",
     "preversion": "npm test",
-    "compile": "rimraf lib/* && babel src -d lib",
-    "prepublishOnly": "npm run compile",
+    "build": "rimraf lib/* && npm run build:module && npm run build:cjs",
+    "build:module": "BABEL_ENV=module node_modules/.bin/babel src -d lib/module",
+    "build:cjs": "node_modules/.bin/babel src -d lib/cjs",
+    "prepublishOnly": "npm run build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -29,31 +33,26 @@
     "prop-types": ">= 15.0.0"
   },
   "devDependencies": {
-    "@storybook/react": "^3.4.11",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-root-import": "^5.1.0",
-    "babel-plugin-source-map-support": "^1.0.0",
-    "babel-plugin-styled-components": "^1.9.4",
-    "babel-plugin-syntax-decorators": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^5.10.0",
-    "eslint-config-xurei": "^1.1.0",
-    "eslint-plugin-jsx": "0.0.2",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.11.1",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@storybook/react": "^6.0.26",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.0.0",
+    "eslint-config-xurei": "^1.1.1",
+    "eslint-plugin-jsx": "0.1.0",
+    "eslint-plugin-promise": "^4.2.0",
+    "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-native": "^3.5.0",
     "eslint-plugin-security": "^1.4.0",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "rimraf": "^2.6.1"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "rimraf": "^3.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "^3.0.0"
+  }
 }
