--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-jotform-embed",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A rewrite for React of the embedded iframe provided by JotForm",
   "main": "lib/cjs/react-jotform-embed.js",
   "module": "lib/module/react-jotform-embed.js",
@@ -31,8 +31,8 @@
     "url": "git+https://github.com/xurei/react-jotform-embed.git"
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
+    "react": ">= 15.0.0",
+    "react-dom": ">= 15.0.0",
     "prop-types": ">= 15.0.0"
   },
   "devDependencies": {
